# Qt-App

./: .gitignore  CMakeLists.txt  CosCRUDGui.h  CosReadOnlyGUI.h  TableModel.h  app.cpp  domain.cpp  domain.h  newGui.cpp  newGui.h  observer.h  repo.cpp  repo.h  service.cpp  service.h  storeGUImodele.cpp  storeGUImodele.h  ui.cpp  ui.h  undo.h
validator/: validator.cpp  validator.h
